--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -136,6 +136,7 @@ allow 149.56.44.47;
 allow 152.32.206.127;
 allow 152.53.106.19;
 allow 152.53.184.161;
+allow 152.53.210.165;
 allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.205.129.174;
@@ -257,7 +258,6 @@ allow 185.107.57.66;
 allow 185.112.144.11;
 allow 185.112.146.167;
 allow 185.113.128.30;
-allow 185.120.16.171;
 allow 185.120.16.176;
 allow 185.126.114.110;
 allow 185.129.61.1;
@@ -596,7 +596,6 @@ allow 194.15.115.212;
 allow 194.15.36.117;
 allow 194.26.192.177;
 allow 194.26.192.77;
-allow 194.53.137.102;
 allow 194.87.55.98;
 allow 195.160.220.104;
 allow 195.176.3.23;
@@ -931,9 +930,7 @@ allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
-allow 23.191.200.30;
 allow 23.191.200.31;
-allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -967,13 +964,6 @@ allow 2600:3c0a::2000:34ff:fe4d:7faf;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:f6f6:2:2634::1;
-allow 2602:f6f6:2:3637::1;
-allow 2602:f6f6:2:90f1::1;
-allow 2602:f6f6:2:941d::1;
-allow 2602:f6f6:2:ad5c::1;
-allow 2602:f6f6:2:cf34::1;
-allow 2602:f6f6:2:d31a::1;
-allow 2602:f6f6:2:dc17::1;
 allow 2602:f915:f:3b43::1;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
@@ -1290,6 +1280,7 @@ allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
+allow 2a0a:4cc0:2000:cd4c::12;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
 allow 2a0b:f4c0:16c:10::1;
@@ -1473,7 +1464,6 @@ allow 2a0d:bbc7::f816:3eff:fee9:3e45;
 allow 2a0d:bbc7::f816:3eff:feec:9f18;
 allow 2a0d:bbc7::f816:3eff:fef2:6521;
 allow 2a0d:c2c0:1:4::2;
-allow 2a0e:1d80:13:b6d5::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
 allow 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1572,7 +1562,6 @@ allow 2a12:a800:2:1:45:141:215:169;
 allow 2a12:a800:2:1:45:141:215:17;
 allow 2a12:a800:2:1:45:141:215:19;
 allow 2a12:a800:2:1:45:141:215:200;
-allow 2a12:a800:2:1:45:141:215:21;
 allow 2a12:a800:2:1:45:141:215:238;
 allow 2a12:a800:2:1:45:141:215:28;
 allow 2a12:a800:2:1:45:141:215:40;
@@ -1587,7 +1576,6 @@ allow 2a12:a800:2:1:45:141:215:95;
 allow 2a12:a800:2:1:45:141:215:97;
 allow 2a12:a800:2:1:45:80:158:167;
 allow 2a12:a800:2:1:45:80:158:27;
-allow 2a12:a800:2:1:45:80:158:69;
 allow 2a12:a800:2:1:45:80:158:75;
 allow 2a12:a800:2:1:45:80:158:93;
 allow 2a12:a800:8:1:45:94:31:68;
@@ -1607,6 +1595,7 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.40.204.206;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1627,17 +1616,8 @@ allow 37.48.70.156;
 allow 37.60.232.250;
 allow 37.60.234.89;
 allow 37.77.56.238;
-allow 38.135.24.30;
 allow 38.135.24.31;
-allow 38.135.24.32;
-allow 38.135.24.33;
 allow 38.135.24.72;
-allow 38.135.25.141;
-allow 38.135.25.142;
-allow 38.135.25.143;
-allow 38.135.25.144;
-allow 38.135.25.2;
-allow 38.242.254.131;
 allow 38.60.250.79;
 allow 38.97.116.242;
 allow 38.97.116.243;
@@ -1676,7 +1656,6 @@ allow 45.141.215.169;
 allow 45.141.215.17;
 allow 45.141.215.19;
 allow 45.141.215.200;
-allow 45.141.215.21;
 allow 45.141.215.238;
 allow 45.141.215.28;
 allow 45.141.215.40;
@@ -1710,7 +1689,6 @@ allow 45.66.35.35;
 allow 45.79.144.222;
 allow 45.80.158.167;
 allow 45.80.158.27;
-allow 45.80.158.69;
 allow 45.80.158.75;
 allow 45.80.158.93;
 allow 45.83.104.137;
