--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -136,6 +136,7 @@ deny 149.56.44.47;
 deny 152.32.206.127;
 deny 152.53.106.19;
 deny 152.53.184.161;
+deny 152.53.210.165;
 deny 152.53.53.243;
 deny 154.16.116.61;
 deny 154.205.129.174;
@@ -257,7 +258,6 @@ deny 185.107.57.66;
 deny 185.112.144.11;
 deny 185.112.146.167;
 deny 185.113.128.30;
-deny 185.120.16.171;
 deny 185.120.16.176;
 deny 185.126.114.110;
 deny 185.129.61.1;
@@ -596,7 +596,6 @@ deny 194.15.115.212;
 deny 194.15.36.117;
 deny 194.26.192.177;
 deny 194.26.192.77;
-deny 194.53.137.102;
 deny 194.87.55.98;
 deny 195.160.220.104;
 deny 195.176.3.23;
@@ -931,9 +930,7 @@ deny 23.191.200.26;
 deny 23.191.200.27;
 deny 23.191.200.28;
 deny 23.191.200.29;
-deny 23.191.200.30;
 deny 23.191.200.31;
-deny 23.191.200.4;
 deny 23.191.200.5;
 deny 23.191.200.7;
 deny 23.191.200.8;
@@ -967,13 +964,6 @@ deny 2600:3c0a::2000:34ff:fe4d:7faf;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
 deny 2602:f6f6:2:2634::1;
-deny 2602:f6f6:2:3637::1;
-deny 2602:f6f6:2:90f1::1;
-deny 2602:f6f6:2:941d::1;
-deny 2602:f6f6:2:ad5c::1;
-deny 2602:f6f6:2:cf34::1;
-deny 2602:f6f6:2:d31a::1;
-deny 2602:f6f6:2:dc17::1;
 deny 2602:f915:f:3b43::1;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
@@ -1290,6 +1280,7 @@ deny 2a09:61c0::20;
 deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
+deny 2a0a:4cc0:2000:cd4c::12;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 deny 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
 deny 2a0b:f4c0:16c:10::1;
@@ -1473,7 +1464,6 @@ deny 2a0d:bbc7::f816:3eff:fee9:3e45;
 deny 2a0d:bbc7::f816:3eff:feec:9f18;
 deny 2a0d:bbc7::f816:3eff:fef2:6521;
 deny 2a0d:c2c0:1:4::2;
-deny 2a0e:1d80:13:b6d5::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
 deny 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1572,7 +1562,6 @@ deny 2a12:a800:2:1:45:141:215:169;
 deny 2a12:a800:2:1:45:141:215:17;
 deny 2a12:a800:2:1:45:141:215:19;
 deny 2a12:a800:2:1:45:141:215:200;
-deny 2a12:a800:2:1:45:141:215:21;
 deny 2a12:a800:2:1:45:141:215:238;
 deny 2a12:a800:2:1:45:141:215:28;
 deny 2a12:a800:2:1:45:141:215:40;
@@ -1587,7 +1576,6 @@ deny 2a12:a800:2:1:45:141:215:95;
 deny 2a12:a800:2:1:45:141:215:97;
 deny 2a12:a800:2:1:45:80:158:167;
 deny 2a12:a800:2:1:45:80:158:27;
-deny 2a12:a800:2:1:45:80:158:69;
 deny 2a12:a800:2:1:45:80:158:75;
 deny 2a12:a800:2:1:45:80:158:93;
 deny 2a12:a800:8:1:45:94:31:68;
@@ -1607,6 +1595,7 @@ deny 2c0f:6c0:0:d::d28b;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
+deny 31.220.75.237;
 deny 31.40.204.206;
 deny 31.44.238.25;
 deny 35.0.127.52;
@@ -1627,17 +1616,8 @@ deny 37.48.70.156;
 deny 37.60.232.250;
 deny 37.60.234.89;
 deny 37.77.56.238;
-deny 38.135.24.30;
 deny 38.135.24.31;
-deny 38.135.24.32;
-deny 38.135.24.33;
 deny 38.135.24.72;
-deny 38.135.25.141;
-deny 38.135.25.142;
-deny 38.135.25.143;
-deny 38.135.25.144;
-deny 38.135.25.2;
-deny 38.242.254.131;
 deny 38.60.250.79;
 deny 38.97.116.242;
 deny 38.97.116.243;
@@ -1676,7 +1656,6 @@ deny 45.141.215.169;
 deny 45.141.215.17;
 deny 45.141.215.19;
 deny 45.141.215.200;
-deny 45.141.215.21;
 deny 45.141.215.238;
 deny 45.141.215.28;
 deny 45.141.215.40;
@@ -1710,7 +1689,6 @@ deny 45.66.35.35;
 deny 45.79.144.222;
 deny 45.80.158.167;
 deny 45.80.158.27;
-deny 45.80.158.69;
 deny 45.80.158.75;
 deny 45.80.158.93;
 deny 45.83.104.137;
