--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -136,6 +136,7 @@ set_real_ip_from 149.56.44.47;
 set_real_ip_from 152.32.206.127;
 set_real_ip_from 152.53.106.19;
 set_real_ip_from 152.53.184.161;
+set_real_ip_from 152.53.210.165;
 set_real_ip_from 152.53.53.243;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.205.129.174;
@@ -257,7 +258,6 @@ set_real_ip_from 185.107.57.66;
 set_real_ip_from 185.112.144.11;
 set_real_ip_from 185.112.146.167;
 set_real_ip_from 185.113.128.30;
-set_real_ip_from 185.120.16.171;
 set_real_ip_from 185.120.16.176;
 set_real_ip_from 185.126.114.110;
 set_real_ip_from 185.129.61.1;
@@ -596,7 +596,6 @@ set_real_ip_from 194.15.115.212;
 set_real_ip_from 194.15.36.117;
 set_real_ip_from 194.26.192.177;
 set_real_ip_from 194.26.192.77;
-set_real_ip_from 194.53.137.102;
 set_real_ip_from 194.87.55.98;
 set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
@@ -931,9 +930,7 @@ set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
-set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
-set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
@@ -967,13 +964,6 @@ set_real_ip_from 2600:3c0a::2000:34ff:fe4d:7faf;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
 set_real_ip_from 2602:f6f6:2:2634::1;
-set_real_ip_from 2602:f6f6:2:3637::1;
-set_real_ip_from 2602:f6f6:2:90f1::1;
-set_real_ip_from 2602:f6f6:2:941d::1;
-set_real_ip_from 2602:f6f6:2:ad5c::1;
-set_real_ip_from 2602:f6f6:2:cf34::1;
-set_real_ip_from 2602:f6f6:2:d31a::1;
-set_real_ip_from 2602:f6f6:2:dc17::1;
 set_real_ip_from 2602:f915:f:3b43::1;
 set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
@@ -1290,6 +1280,7 @@ set_real_ip_from 2a09:61c0::20;
 set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
+set_real_ip_from 2a0a:4cc0:2000:cd4c::12;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 set_real_ip_from 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
@@ -1473,7 +1464,6 @@ set_real_ip_from 2a0d:bbc7::f816:3eff:fee9:3e45;
 set_real_ip_from 2a0d:bbc7::f816:3eff:feec:9f18;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fef2:6521;
 set_real_ip_from 2a0d:c2c0:1:4::2;
-set_real_ip_from 2a0e:1d80:13:b6d5::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:101;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1572,7 +1562,6 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:169;
 set_real_ip_from 2a12:a800:2:1:45:141:215:17;
 set_real_ip_from 2a12:a800:2:1:45:141:215:19;
 set_real_ip_from 2a12:a800:2:1:45:141:215:200;
-set_real_ip_from 2a12:a800:2:1:45:141:215:21;
 set_real_ip_from 2a12:a800:2:1:45:141:215:238;
 set_real_ip_from 2a12:a800:2:1:45:141:215:28;
 set_real_ip_from 2a12:a800:2:1:45:141:215:40;
@@ -1587,7 +1576,6 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:95;
 set_real_ip_from 2a12:a800:2:1:45:141:215:97;
 set_real_ip_from 2a12:a800:2:1:45:80:158:167;
 set_real_ip_from 2a12:a800:2:1:45:80:158:27;
-set_real_ip_from 2a12:a800:2:1:45:80:158:69;
 set_real_ip_from 2a12:a800:2:1:45:80:158:75;
 set_real_ip_from 2a12:a800:2:1:45:80:158:93;
 set_real_ip_from 2a12:a800:8:1:45:94:31:68;
@@ -1607,6 +1595,7 @@ set_real_ip_from 2c0f:6c0:0:d::d28b;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
+set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.40.204.206;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
@@ -1627,17 +1616,8 @@ set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.60.232.250;
 set_real_ip_from 37.60.234.89;
 set_real_ip_from 37.77.56.238;
-set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
-set_real_ip_from 38.135.24.32;
-set_real_ip_from 38.135.24.33;
 set_real_ip_from 38.135.24.72;
-set_real_ip_from 38.135.25.141;
-set_real_ip_from 38.135.25.142;
-set_real_ip_from 38.135.25.143;
-set_real_ip_from 38.135.25.144;
-set_real_ip_from 38.135.25.2;
-set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.60.250.79;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
@@ -1676,7 +1656,6 @@ set_real_ip_from 45.141.215.169;
 set_real_ip_from 45.141.215.17;
 set_real_ip_from 45.141.215.19;
 set_real_ip_from 45.141.215.200;
-set_real_ip_from 45.141.215.21;
 set_real_ip_from 45.141.215.238;
 set_real_ip_from 45.141.215.28;
 set_real_ip_from 45.141.215.40;
@@ -1710,7 +1689,6 @@ set_real_ip_from 45.66.35.35;
 set_real_ip_from 45.79.144.222;
 set_real_ip_from 45.80.158.167;
 set_real_ip_from 45.80.158.27;
-set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.80.158.75;
 set_real_ip_from 45.80.158.93;
 set_real_ip_from 45.83.104.137;
