--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -74,6 +74,7 @@ allow 107.189.8.133;
 allow 107.189.8.181;
 allow 107.189.8.226;
 allow 107.189.8.56;
+allow 107.189.8.65;
 allow 107.189.8.70;
 allow 108.181.69.243;
 allow 108.61.189.136;
@@ -258,6 +259,7 @@ allow 185.107.57.66;
 allow 185.112.144.11;
 allow 185.112.146.167;
 allow 185.113.128.30;
+allow 185.120.16.171;
 allow 185.120.16.176;
 allow 185.126.114.110;
 allow 185.129.61.1;
@@ -596,6 +598,7 @@ allow 194.15.115.212;
 allow 194.15.36.117;
 allow 194.26.192.177;
 allow 194.26.192.77;
+allow 194.53.137.102;
 allow 194.87.55.98;
 allow 195.160.220.104;
 allow 195.176.3.23;
@@ -920,6 +923,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -930,8 +934,12 @@ allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
+allow 23.191.200.3;
+allow 23.191.200.30;
 allow 23.191.200.31;
+allow 23.191.200.4;
 allow 23.191.200.5;
+allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -964,6 +972,13 @@ allow 2600:3c0a::2000:34ff:fe4d:7faf;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:f6f6:2:2634::1;
+allow 2602:f6f6:2:3637::1;
+allow 2602:f6f6:2:90f1::1;
+allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:ad5c::1;
+allow 2602:f6f6:2:cf34::1;
+allow 2602:f6f6:2:d31a::1;
+allow 2602:f6f6:2:dc17::1;
 allow 2602:f915:f:3b43::1;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
@@ -1029,6 +1044,7 @@ allow 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 allow 2605:6400:30:f57d:916e:73f8:d5e7:675b;
 allow 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
+allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
@@ -1464,6 +1480,7 @@ allow 2a0d:bbc7::f816:3eff:fee9:3e45;
 allow 2a0d:bbc7::f816:3eff:feec:9f18;
 allow 2a0d:bbc7::f816:3eff:fef2:6521;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0e:1d80:13:b6d5::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
 allow 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1616,8 +1633,16 @@ allow 37.48.70.156;
 allow 37.60.232.250;
 allow 37.60.234.89;
 allow 37.77.56.238;
+allow 38.135.24.30;
 allow 38.135.24.31;
+allow 38.135.24.32;
+allow 38.135.24.33;
 allow 38.135.24.72;
+allow 38.135.25.141;
+allow 38.135.25.142;
+allow 38.135.25.143;
+allow 38.135.25.144;
+allow 38.135.25.2;
 allow 38.60.250.79;
 allow 38.97.116.242;
 allow 38.97.116.243;
@@ -1848,9 +1873,7 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
-allow 87.120.222.33;
 allow 87.120.254.132;
-allow 88.151.192.2;
 allow 88.151.194.24;
 allow 88.80.20.86;
 allow 88.80.26.2;
