--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -74,6 +74,7 @@ set_real_ip_from 107.189.8.133;
 set_real_ip_from 107.189.8.181;
 set_real_ip_from 107.189.8.226;
 set_real_ip_from 107.189.8.56;
+set_real_ip_from 107.189.8.65;
 set_real_ip_from 107.189.8.70;
 set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.61.189.136;
@@ -258,6 +259,7 @@ set_real_ip_from 185.107.57.66;
 set_real_ip_from 185.112.144.11;
 set_real_ip_from 185.112.146.167;
 set_real_ip_from 185.113.128.30;
+set_real_ip_from 185.120.16.171;
 set_real_ip_from 185.120.16.176;
 set_real_ip_from 185.126.114.110;
 set_real_ip_from 185.129.61.1;
@@ -596,6 +598,7 @@ set_real_ip_from 194.15.115.212;
 set_real_ip_from 194.15.36.117;
 set_real_ip_from 194.26.192.177;
 set_real_ip_from 194.26.192.77;
+set_real_ip_from 194.53.137.102;
 set_real_ip_from 194.87.55.98;
 set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
@@ -920,6 +923,7 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
+set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -930,8 +934,12 @@ set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
+set_real_ip_from 23.191.200.3;
+set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
+set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
+set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -964,6 +972,13 @@ set_real_ip_from 2600:3c0a::2000:34ff:fe4d:7faf;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
 set_real_ip_from 2602:f6f6:2:2634::1;
+set_real_ip_from 2602:f6f6:2:3637::1;
+set_real_ip_from 2602:f6f6:2:90f1::1;
+set_real_ip_from 2602:f6f6:2:941d::1;
+set_real_ip_from 2602:f6f6:2:ad5c::1;
+set_real_ip_from 2602:f6f6:2:cf34::1;
+set_real_ip_from 2602:f6f6:2:d31a::1;
+set_real_ip_from 2602:f6f6:2:dc17::1;
 set_real_ip_from 2602:f915:f:3b43::1;
 set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
@@ -1029,6 +1044,7 @@ set_real_ip_from 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 set_real_ip_from 2605:6400:30:f57d:916e:73f8:d5e7:675b;
 set_real_ip_from 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 set_real_ip_from 2605:6400:30:f5db:25a1:b884:ef2d:8818;
+set_real_ip_from 2605:6400:30:f623:5a78:29a6:8492:27b0;
 set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
 set_real_ip_from 2605:6400:30:f78b::2;
 set_real_ip_from 2605:6400:30:f7c0:8511:b113:ca11:9baa;
@@ -1464,6 +1480,7 @@ set_real_ip_from 2a0d:bbc7::f816:3eff:fee9:3e45;
 set_real_ip_from 2a0d:bbc7::f816:3eff:feec:9f18;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fef2:6521;
 set_real_ip_from 2a0d:c2c0:1:4::2;
+set_real_ip_from 2a0e:1d80:13:b6d5::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:101;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1616,8 +1633,16 @@ set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.60.232.250;
 set_real_ip_from 37.60.234.89;
 set_real_ip_from 37.77.56.238;
+set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
+set_real_ip_from 38.135.24.32;
+set_real_ip_from 38.135.24.33;
 set_real_ip_from 38.135.24.72;
+set_real_ip_from 38.135.25.141;
+set_real_ip_from 38.135.25.142;
+set_real_ip_from 38.135.25.143;
+set_real_ip_from 38.135.25.144;
+set_real_ip_from 38.135.25.2;
 set_real_ip_from 38.60.250.79;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
@@ -1848,9 +1873,7 @@ set_real_ip_from 87.118.116.12;
 set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
-set_real_ip_from 87.120.222.33;
 set_real_ip_from 87.120.254.132;
-set_real_ip_from 88.151.192.2;
 set_real_ip_from 88.151.194.24;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
