--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -43,7 +43,6 @@ set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.11.111;
 set_real_ip_from 107.189.1.160;
 set_real_ip_from 107.189.1.175;
-set_real_ip_from 107.189.1.228;
 set_real_ip_from 107.189.12.3;
 set_real_ip_from 107.189.12.7;
 set_real_ip_from 107.189.13.180;
@@ -720,20 +719,6 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:67c:e28:1::2;
 set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:67c:e28:1::4;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:173;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:174;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:175;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:176;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:177;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:178;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:179;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:180;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:181;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:182;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:183;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:184;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:185;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:186;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:191;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:192;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:193;
@@ -912,6 +897,7 @@ set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.244;
 set_real_ip_from 23.151.8.8;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.191.200.10;
 set_real_ip_from 23.191.200.11;
@@ -971,6 +957,7 @@ set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
 set_real_ip_from 2600:3c0a::2000:34ff:fe4d:7faf;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
